# slick-orderbook

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/: markdown-link-check-config.json
.github/workflows/: benchmarks.yml  ci.yml  documentation.yml  release.yml
api/: ARCHITECTURE_8md.html  PERFORMANCE_8md.html  README_8md.html  annotated.html  annotated_dup.js  classes.html  classslick_1_1orderbook_1_1IOrderBookObserver-members.html  classslick_1_1orderbook_1_1IOrderBookObserver.html  classslick_1_1orderbook_1_1IOrderBookObserver.js  classslick_1_1orderbook_1_1IOrderBookObserver__coll__graph.map  classslick_1_1orderbook_1_1IOrderBookObserver__coll__graph.md5  classslick_1_1orderbook_1_1ObserverManager-members.html  classslick_1_1orderbook_1_1ObserverManager.html  classslick_1_1orderbook_1_1ObserverManager.js  classslick_1_1orderbook_1_1ObserverManager__coll__graph.map  classslick_1_1orderbook_1_1ObserverManager__coll__graph.md5  classslick_1_1orderbook_1_1OrderBookL2-members.html  classslick_1_1orderbook_1_1OrderBookL2.html  classslick_1_1orderbook_1_1OrderBookL2.js  classslick_1_1orderbook_1_1OrderBookL2__coll__graph.map  classslick_1_1orderbook_1_1OrderBookL2__coll__graph.md5  classslick_1_1orderbook_1_1OrderBookL3-members.html  classslick_1_1orderbook_1_1OrderBookL3.html  classslick_1_1orderbook_1_1OrderBookL3.js  classslick_1_1orderbook_1_1OrderBookL3__coll__graph.map  classslick_1_1orderbook_1_1OrderBookL3__coll__graph.md5  classslick_1_1orderbook_1_1OrderBookManager-members.html  classslick_1_1orderbook_1_1OrderBookManager.html  classslick_1_1orderbook_1_1OrderBookManager.js  classslick_1_1orderbook_1_1OrderBookManager__coll__graph.map  classslick_1_1orderbook_1_1OrderBookManager__coll__graph.md5  classslick_1_1orderbook_1_1detail_1_1IntrusiveList-members.html  classslick_1_1orderbook_1_1detail_1_1IntrusiveList.html  classslick_1_1orderbook_1_1detail_1_1IntrusiveList.js  classslick_1_1orderbook_1_1detail_1_1IntrusiveList_1_1ConstIterator-members.html  classslick_1_1orderbook_1_1detail_1_1IntrusiveList_1_1ConstIterator.html  classslick_1_1orderbook_1_1detail_1_1IntrusiveList_1_1ConstIterator.js  classslick_1_1orderbook_1_1detail_1_1IntrusiveList_1_1ConstIterator__coll__graph.map  classslick_1_1orderbook_1_1detail_1_1IntrusiveList_1_1ConstIterator__coll__graph.md5  classslick_1_1orderbook_1_1detail_1_1IntrusiveList_1_1ConstReverseIterator-members.html  (+326 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_23.js  all_25.js  all_26.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2d.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+78 more)
benchmarks/: CACHE_ALIGNMENT_RESULTS.md  CMakeLists.txt  PROFILING_GUIDE.md  README.md  bench_cache_alignment.cpp  bench_market_replay.cpp  bench_memory_usage.cpp  bench_observer_overhead.cpp  bench_orderbook_l2.cpp  bench_orderbook_l3.cpp  bench_orderbook_manager.cpp
docs/: PERFORMANCE.md  mainpage.md
examples/: CMakeLists.txt  README.md  coinbase_integration.cpp  multi_symbol_orderbook.cpp  simple_l2_orderbook.cpp  simple_l3_orderbook.cpp
include/slick/orderbook/: concepts.hpp  config.hpp  events.hpp  observer.hpp  orderbook.hpp  orderbook_l2.hpp  orderbook_l3.hpp  orderbook_manager.hpp  types.hpp
include/slick/orderbook/detail/: intrusive_list.hpp  level_container.hpp  memory_pool.hpp  order_map.hpp  price_level_l2.hpp  price_level_l3.hpp
include/slick/orderbook/detail/impl/: orderbook_l2_impl.hpp  orderbook_l3_impl.hpp  orderbook_manager_impl.hpp
include_private/slick/orderbook/detail/: flat_map.hpp  intrusive_list.hpp  level_container.hpp  memory_pool.hpp  order.hpp  order_map.hpp  price_level.hpp
src/core/: orderbook_l2.cpp  orderbook_l3.cpp  orderbook_manager.cpp
tests/: CMakeLists.txt
tests/unit/: test_intrusive_list.cpp  test_memory_pool.cpp  test_orderbook_l2.cpp  test_orderbook_l3.cpp  test_orderbook_manager.cpp
